# cookiecutter-tpl

./: .flake8  .gitignore  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: settings.py
