[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = [
 "Timofei Mironov <timirlan666@gmail.com>",
]
readme = "README.md"

[tool.poetry.urls]
"Source" = ""
"Documentation" = ""

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.910"
python-lsp-server = {extras = ["rope"], version = "^1.3.3"}
pyls-flake8 = "^0.4.0"
pylsp-mypy = "^0.5.4"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
